--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroui/button": "^2.2.10",
     "@heroui/checkbox": "^2.3.9",
+    "@heroui/progress": "^2.2.7",
     "@heroui/react": "^2.6.14",
     "@heroui/skeleton": "^2.2.6",
     "@heroui/system": "^2.4.7",
@@ -19,6 +20,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.1.2",
+    "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.5.1",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
@@ -28,6 +30,7 @@
     "ldrs": "^1.0.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "react": "^19.0.0",
