--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^5.1.1",
+    "sharp": "^0.34.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
