--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.4",
@@ -37,6 +37,7 @@
     "framer-motion": "^12.3.1",
     "ldrs": "^1.0.2",
     "lucide-react": "^0.474.0",
+    "motion": "^12.7.4",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
@@ -54,6 +55,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
