--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-switch": "^1.1.4",
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.5.1",
+    "@stripe/stripe-js": "^7.2.0",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -52,6 +53,7 @@
     "redux-persist-transform-encrypt": "^5.1.1",
     "sharp": "^0.34.1",
     "sonner": "^1.7.4",
+    "stripe": "^18.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
